--- a/src/app/modules/financial-goal-form/financial-goal-form.component.scss
+++ b/src/app/modules/financial-goal-form/financial-goal-form.component.scss
@@ -1,83 +1,1 @@
-@import '../../../styles/shared-styles.scss';
-
-$primary-color: #263238; // Dark blue-gray
-$secondary-color: #78909C; // Light blue-gray
-$accent-color: #ffff; // Light gray
-$font-family: 'Arial', sans-serif;
-
-// Base Styles
-.outer-container {
-    display: flex;
-    justify-content: space-around;
-    gap: 20px;
-    /* Adds space between the two components */
-    max-width: 1000px;
-    /* Adjust as needed */
-    margin: 50px auto;
-}
-
-.goal-form-container {
-    flex: 1;
-    /* Allows the component to take equal space */
-    display: flex;
-    justify-content: center;
-    /* Center the content horizontally */
-    align-items: center;
-    /* Center the content vertically */
-}
-
-.savings-calculator-container {
-    flex: 1;
-    /* Allows the component to take equal space */
-}
-
-.savings-calculator {
-    max-width: 400px;
-    background-color: $accent-color;
-    border-radius: 8px;
-    padding: 30px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-
-    h2 {
-        color: $primary-color;
-        font-size: 24px;
-        text-align: center;
-        margin-bottom: 20px;
-    }
-
-    .form-group {
-        margin-bottom: 20px;
-
-        label {
-            display: block;
-            font-size: 16px;
-            color: $primary-color;
-            margin-bottom: 5px;
-        }
-
-        input {
-            width: 100%;
-            padding: 12px;
-            font-size: 16px;
-            border: 2px solid $secondary-color;
-            border-radius: 4px;
-            box-sizing: border-box;
-            transition: border-color 0.3s ease;
-
-            &:focus {
-                outline: none;
-                border-color: $primary-color;
-            }
-        }
-
-        .error {
-            color: #e74c3c;
-            font-size: 14px;
-            margin-top: 5px;
-        }
-    }
-
-    button {
-        @include primary-button;
-    }
-}
+@import '../../../styles/form-styles.scss';
