--- a/src/app/modules/transaction-form/transaction.component.scss
+++ b/src/app/modules/transaction-form/transaction.component.scss
@@ -1,68 +1,1 @@
-@import '../../../styles/shared-styles.scss';
-
-.container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  padding: 10px;
-
-  .label-container {
-    margin: 10px;
-  }
-
-  form {
-    @include form-container;
-    text-align: left;
-    background-color: #ffff;
-
-    .form-group {
-      margin-top: var(--padding);
-
-      label {
-        display: block;
-        font-weight: bold;
-        margin-bottom: 5px;
-      }
-
-      input[type="text"],
-      input[type="number"],
-      input[type="date"],
-      select,
-      button {
-        @include input-styles;
-      }
-
-      input[type="checkbox"] {
-        width: 20px;
-        height: 20px;
-        margin-top: 4px;
-      }
-
-      input[type="time"] {
-        padding: 10px;
-        border: 1px solid #ccc;
-        border-radius: 4px;
-        font-size: 16px;
-        margin-top: 4px;
-        width: 100%;
-        box-sizing: border-box;
-      }
-
-      .error-message {
-        color: red;
-        font-size: 14px;
-      }
-    }
-
-    button {
-      @include primary-button;
-      padding: 10px;
-      font-size: 1rem;
-    }
-  }
-
-  @media screen and (max-width: 480px) {
-    max-width: 100%;
-  }
-}
+@import '../../../styles/form-styles.scss';
