--- a/src/styles/shared-styles.scss
+++ b/src/styles/shared-styles.scss
@@ -138,7 +138,7 @@ input {
 }
 
 @mixin form-container {
-    background-color: var(--background-color);
+    background-color: var(--button-text-color);
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
