--- a/src/app/modules/category-overview/category-overview.component.scss
+++ b/src/app/modules/category-overview/category-overview.component.scss
@@ -1,81 +1,1 @@
-/* Custom button styles with pastel shades */
-
-.btn-custom-update {
-  background-color: #5f9e5f;
-  /* Pastel green color */
-  color: white;
-  border: none;
-}
-
-.btn-custom-delete {
-  background-color: #eca34f;
-  /* Pastel yellow color */
-  color: black;
-  border: none;
-}
-
-.btn-custom-update:hover,
-.btn-custom-delete:hover {
-  opacity: 0.8;
-  /* Add a hover effect */
-}
-
-/* Existing styles */
-
-.container {
-  padding: 20px;
-}
-
-.transaction-container {
-  margin-top: 20px;
-}
-
-.card {
-  border: 1px solid rgba(0, 0, 0, 0.125);
-  border-radius: 0.25rem;
-}
-
-.card-header {
-  background-color: #f8f9fa;
-  padding: 0.75rem 1.25rem;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.125);
-}
-
-.card-body {
-  padding: 1.25rem;
-}
-
-.transaction-quantity {
-  margin-bottom: 10px;
-}
-
-.empty-list-message {
-  text-align: center;
-  margin-top: 20px;
-}
-
-.table {
-  width: 100%;
-  border-collapse: collapse;
-}
-
-.table th,
-.table td {
-  padding: 0.75rem;
-  vertical-align: top;
-  border-top: 1px solid rgba(0, 0, 0, 0.125);
-}
-
-.table th {
-  vertical-align: bottom;
-  border-bottom: 2px solid rgba(0, 0, 0, 0.125);
-  text-align: left;
-}
-
-.table-striped tbody tr:nth-of-type(odd) {
-  background-color: rgba(0, 0, 0, 0.05);
-}
-
-.action-buttons button {
-  margin-right: 5px;
-}
+@import '../../../styles/table-styles.scss';
