--- a/src/app/modules/limit-overview/limit-overview.component.scss
+++ b/src/app/modules/limit-overview/limit-overview.component.scss
@@ -1,93 +1,1 @@
-/* Variables */
-$primary-color: #263238; // Dark blue-gray
-$accent-color: #ECEFF1; // Light gray
-$font-family: 'Arial', sans-serif;
-$pastel-green: #77dd77;
-/* Pastel green */
-$pastel-yellow: #ffdfba;
-/* Pastel yellow */
-
-/* Base Styles */
-.container {
-    padding: 20px;
-}
-
-.transaction-container {
-    margin-top: 20px;
-}
-
-.card {
-    border: 1px solid rgba(0, 0, 0, 0.125);
-    border-radius: 0.25rem;
-}
-
-.card-header {
-    background-color: #f8f9fa;
-    padding: 0.75rem 1.25rem;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.125);
-}
-
-.card-body {
-    padding: 1.25rem;
-}
-
-.table {
-    width: 100%;
-    border-collapse: collapse;
-}
-
-.table th,
-.table td {
-    padding: 0.75rem;
-    vertical-align: top;
-    border-top: 1px solid rgba(0, 0, 0, 0.125);
-}
-
-.table th {
-    vertical-align: bottom;
-    border-bottom: 2px solid rgba(0, 0, 0, 0.125);
-    text-align: left;
-    color: $primary-color;
-}
-
-.table tbody tr:nth-of-type(odd) {
-    background-color: rgba(0, 0, 0, 0.05);
-}
-
-.empty-list-message {
-    text-align: center;
-    margin-top: 20px;
-}
-
-.btn-group {
-    display: flex;
-}
-
-.btn {
-    width: 100px;
-    margin-right: 5px;
-    font-size: 14px;
-    padding: 10px;
-    border-radius: 4px;
-    transition: background-color 0.3s ease;
-
-    &.btn-pastel-green {
-        background-color: $pastel-green;
-        border: none;
-        color: #fff;
-
-        &:hover {
-            background-color: darken($pastel-green, 10%);
-        }
-    }
-
-    &.btn-pastel-yellow {
-        background-color: $pastel-yellow;
-        border: none;
-        color: #fff;
-
-        &:hover {
-            background-color: darken($pastel-yellow, 10%);
-        }
-    }
-}
+@import '../../../styles/table-styles.scss';
