--- a/src/app/modules/transaction-overview/transaction-overview.component.scss
+++ b/src/app/modules/transaction-overview/transaction-overview.component.scss
@@ -1,106 +1,1 @@
-.filter-wrapper {
-  padding: 20px;
-  background-color: #f8f9fa;
-  /* Hintergrundfarbe des Containers */
-  border-radius: 10px;
-  /* Abgerundete Ecken für den Container */
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  /* Schatten hinzufügen */
-  margin-bottom: 20px;
-  /* Platz unterhalb des Containers */
-}
-
-.filter-container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-}
-
-.filter-field {
-  flex-basis: calc(20% - 10px);
-  margin-bottom: 20px;
-  padding: 15px;
-  border-radius: 8px;
-  border: 1px solid #ddd;
-  background-color: #fff;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  transition: all 0.3s ease;
-}
-
-.filter-field:hover {
-  transform: translateY(-2px);
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-}
-
-@media (max-width: 768px) {
-  .filter-field {
-    flex-basis: calc(50% - 10px);
-  }
-}
-
-@media (max-width: 576px) {
-  .filter-field {
-    flex-basis: 100%;
-  }
-}
-
-
-.container {
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 20px;
-}
-
-.transaction-container {
-  margin-top: 20px;
-}
-
-.card {
-  border: 1px solid rgba(0, 0, 0, 0.125);
-  border-radius: 0.25rem;
-}
-
-.card-header {
-  background-color: #f8f9fa;
-  padding: 0.75rem 1.25rem;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.125);
-}
-
-.card-body {
-  padding: 1.25rem;
-}
-
-.transaction-quantity {
-  margin-bottom: 10px;
-}
-
-.empty-list-message {
-  text-align: center;
-  margin-top: 20px;
-}
-
-.table {
-  width: 100%;
-  border-collapse: collapse;
-}
-
-.table th,
-.table td {
-  padding: 0.75rem;
-  vertical-align: top;
-  border-top: 1px solid rgba(0, 0, 0, 0.125);
-}
-
-.table th {
-  vertical-align: bottom;
-  border-bottom: 2px solid rgba(0, 0, 0, 0.125);
-  text-align: left;
-}
-
-.table-striped tbody tr:nth-of-type(odd) {
-  background-color: rgba(0, 0, 0, 0.05);
-}
-
-.action-buttons button {
-  margin-right: 5px;
-}
+@import '../../../styles/table-styles.scss';
