--- a/src/app/modules/limit-overview/limit-overview.component.html
+++ b/src/app/modules/limit-overview/limit-overview.component.html
@@ -1,41 +1,41 @@
 <!-- src/app/components/limit-overview/limit-overview.component.html -->
-<div class="container">
-    <div class="transaction-container">
-        <div class="card">
-            <div class="card-header">
-                Лимиты
-            </div>
-            <div class="card-body">
-                <div class="table-responsive">
-                    <table class="table">
-                        <thead>
-                            <tr>
-                                <th>Название категории</th>
-                                <th>Сумма</th>
-                                <th>День отсчета</th>
-                                <th>Действия</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr *ngFor="let limit of limits">
-                                <td>{{ getCategoryName(limit.categoryId) }}</td>
-                                <td>{{ limit.amount | currency:'RUB ':'symbol' }}</td>
-                                <td>{{ limit.startDay }}</td>
-                                <td>
-                                    <div class="btn-group" role="group" aria-label="Действия с лимитом">
-                                        <button type="button" class="btn btn-pastel-green"
-                                            (click)="updateLimit(limit.id)">Обновить</button>
-                                        <button type="button" class="btn btn-pastel-yellow"
-                                            (click)="deleteLimit(limit.id)">Удалить</button>
-                                    </div>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-                <div *ngIf="limits.length === 0" class="empty-list-message">
-                    Нет доступных лимитов.
-                </div>
+<div class="container mt-4">
+    <div class="content">
+        <div class="table-header">
+            Лимиты
+        </div>
+        <div class="table-body">
+
+            <table class="table table-striped">
+                <thead>
+                    <tr>
+                        <th>Название категории</th>
+                        <th>Сумма</th>
+                        <th>День отсчета</th>
+                        <th>Действия</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr *ngFor="let limit of limits">
+                        <td>{{ getCategoryName(limit.categoryId) }}</td>
+                        <td>{{ limit.amount | currency:'RUB ':'symbol' }}</td>
+                        <td>{{ limit.startDay }}</td>
+                        <td>
+                            <div class="action-buttons">
+                                <button type="button" (click)="deleteLimit(limit.id)">
+                                    <i class="fa fa-trash"></i>
+                                </button>
+                                <button type="button" (click)="updateLimit(limit.id)">
+                                    <i class="fa fa-edit"></i>
+                                </button>
+                            </div>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+
+            <div *ngIf="limits.length === 0" class="empty-list-message">
+                Нет доступных лимитов.
             </div>
         </div>
     </div>
