--- a/src/styles/shared-styles.scss
+++ b/src/styles/shared-styles.scss
@@ -73,12 +73,16 @@ button:hover {
 }
 
 @mixin container-styles {
-    background-color: var(--button-text-color);
+    max-width: 1200px;
+    margin: 0 auto;
     padding: 20px;
+
+    background-color: var(--button-text-color);
     border-radius: var(--border-radius);
     width: 90%;
-    max-width: 320px;
-    margin: 20px;
+    // max-width: 320px;
+    // padding: 20px;
+    // margin: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
